# bralltog-hotreload

./: .gitignore  CMakeLists.txt  bralltog.c  game.c  game.h  readme.md
emscripten/: shell.html
useful-scripts/: compile-debug.sh  remake-targets-automatically.sh  runserver.sh
